# ATD3.5-S3-Full-Test-PIO

./: .gitmodules  platformio.ini
LVGL/: FullTest.sll  FullTest.spj
include/: lv_conf.h
src/: LVGL.cpp
src/gui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.h  ui_helpers.c  ui_helpers.h
src/gui/components/: ui_comp_hook.c
src/gui/screens/: ui_Display.c  ui_I2C.c  ui_IO.c  ui_Index.c  ui_LED_SW.c  ui_MicroSD_Card.c  ui_Sound.c  ui_Touch.c  ui_USB_OTG.c  ui_WiFi.c
